Initial update to roofdog copy and styles

--- a/estimate.html
+++ b/estimate.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Home - Roofdog Roofing</title>
+    <title>Action - Roofdog Roofing</title>
 </head>
 
 <body>
@@ -28,36 +28,24 @@
                 </div>
             </div>
         </nav>
-
-        <section id="banner" class="container banner">
-            <div id="banner-title" class="banner-title">
-                <h1>Roofdog Roofing</h1>
-            </div>
-
-            <div id="banner-tagline" class="banner-tagline">
-                <p>Your roofs best friend.</p>
-            </div>
-            <div id="banner-button" class="banner-button">
-                <a href="./estimate.html" class="button">Free Estimate</a>
-            </div>
-        </section>
     </header>
 
     <main class="container">
-        <section id="about-home" class="about-home">
-            <h2>Who is Roofdog Roofing?</h2>
-            <div id="card-1" class="card-1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, non fuga! Dignissimos temporibus id debitis blanditiis totam optio laboriosam officia quidem, nostrum dolor consectetur itaque! Voluptatum possimus dolorem consequatur ab!</p>
+        <section id="estimate" class="estimate">
+            <h2>Free Estimate</h2>
+            <iframe data-tally-src="https://tally.so/embed/3qLV47?hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="358" frameborder="0" marginheight="0" marginwidth="0" title="Free Estimate"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+        </section>
+        <section id="contact" class="contact">
+            <h3>Contact</h3>
+            <div id="contact-info" class="contact-info">
+                <p><strong>Email:</strong> roofdogroofing@gmail.com</p>
+                <p><strong>Instagram:</strong> RoofdogRoofing</p>
             </div>
-            <div id="card-2" class="card-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, non fuga! Dignissimos temporibus id debitis blanditiis totam optio laboriosam officia quidem, nostrum dolor consectetur itaque! Voluptatum possimus dolorem consequatur ab!</p>
-            </div>
-            <div id="card-3" class="card-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, non fuga! Dignissimos temporibus id debitis blanditiis totam optio laboriosam officia quidem, nostrum dolor consectetur itaque! Voluptatum possimus dolorem consequatur ab!</p>
-            </div>
-            <div id="card-4" class="card-4">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, non fuga! Dignissimos temporibus id debitis blanditiis totam optio laboriosam officia quidem, nostrum dolor consectetur itaque! Voluptatum possimus dolorem consequatur ab!</p>
-            </div>
+            <!-- <h3>Join my newsletter!</h3>
+            <form id="contact-form" class="contact-form">
+                <label for="email">Email: </label>
+                <input id="email" type="email">
+            </form> -->
         </section>
     </main>
 
