--- a/about.html
+++ b/about.html
@@ -7,24 +7,23 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>About -</title>
+    <title>About - Roofdog Roofing</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="container navbar row">
+            <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand">
-                    <a href="./index.html" class="nav-brand"><strong>Roofing</strong></a>
+                    <a href="./index.html" class="nav-brand"><strong>RoofdogRoofing</strong></a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
                     <div class="nav-menu-options">
-                        <div class="nav-button"><a href="./gallery.html">Home</a></div>
+                        <div class="nav-button active"><a href="./gallery.html">Home</a></div>
                         <div class="nav-button"><a href="./gallery.html">Gallery</a></div>
                         <div class="nav-button"><a href="./about.html">About</a></div>
-                        <div class="nav-button"><a href="./action.html">Consult</a></div>
-                        <div class="nav-button action"><a href="./action.html">Get Quote!</a></div>
+                        <div class="nav-button accent"><a href="./estimate.html">Free Estimate</a></div>
                     </div>
                 </div>
             </div>
@@ -39,9 +38,8 @@
         <section id="contact" class="contact">
             <h3>Contact</h3>
             <div id="contact-info" class="contact-info">
-                <p><strong>Email:</strong> </p>
-                <p><strong>Instagram:</strong> <a href="https://www.instagram.com/chadregier/">ChadRegier</a></p>
-                <p><strong>Twitter:</strong> <a href="https://twitter.com/chadregier">ChadRegier</a></p>
+                <p><strong>Email:</strong> roofdogroofing@gmail.com</p>
+                <p><strong>Instagram:</strong> RoofdogRoofing</p>
             </div>
             <!-- <h3>Join my newsletter!</h3>
             <form id="contact-form" class="contact-form">
@@ -49,25 +47,22 @@
                 <input id="email" type="email">
             </form> -->
         </section>
-        <section id="newsletter" class="newsletter">
-            <iframe data-tally-src="https://tally.so/embed/wL9992?transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="461" frameborder="0" marginheight="0" marginwidth="0" title="WW Newsletter sign-up"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
-        </section>
     </main>
 
     <footer>
         <div class="container">
-            <h4><a href="./index.html">Quality Roofing</a></h4>
+            <h4><a href="./index.html">Roofdog Roofing</a></h4>
             <hr>
             <div class="row sa">
                 <div class="footer-left">
-                    <a href="https://www.instagram.com/chadregier/">Instagram</a>
-                    <a href="https://twitter.com/ChadRegier">Twitter</a>
+                    <a href="./index.html">Home</a>
+                    <a href="./estimate.html">Gallery</a>
+                    <a href="./about.html">About</a>
+                    <a href="./gallery.html">Free Estimate</a>
                 </div>
                 <div class="footer-right">
-                    <a href="./index.html">Home</a>
-                    <a href="./action.html">Gallery</a>
-                    <a href="./about.html">About</a>
-                    <a href="./gallery.html">Get a Quote / Consultation</a>
+                    <a href="#">Instagram</a>
+
                 </div>
             </div>
         </div>
@@ -75,6 +70,5 @@
 
     <!-- Link Javascript -->
     <script src="https://kit.fontawesome.com/f9f0b7256e.js" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
 </body>
 </html>
