--- a/gallery.html
+++ b/gallery.html
@@ -7,24 +7,23 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Gallery -</title>
+    <title>Gallery - Roofdog Roofing</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="container navbar row">
+            <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand">
-                    <a href="./index.html" class="nav-brand"><strong>Roofing</strong></a>
+                    <a href="./index.html" class="nav-brand"><strong>RoofdogRoofing</strong></a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
                     <div class="nav-menu-options">
-                        <div class="nav-button"><a href="./gallery.html">Home</a></div>
+                        <div class="nav-button active"><a href="./gallery.html">Home</a></div>
                         <div class="nav-button"><a href="./gallery.html">Gallery</a></div>
                         <div class="nav-button"><a href="./about.html">About</a></div>
-                        <div class="nav-button"><a href="./action.html">Consult</a></div>
-                        <div class="nav-button action"><a href="./action.html">Get Quote!</a></div>
+                        <div class="nav-button accent"><a href="./estimate.html">Free Estimate</a></div>
                     </div>
                 </div>
             </div>
@@ -38,18 +37,18 @@
 
     <footer>
         <div class="container">
-            <h4><a href="./index.html">Quality Roofing</a></h4>
+            <h4><a href="./index.html">Roofdog Roofing</a></h4>
             <hr>
             <div class="row sa">
                 <div class="footer-left">
-                    <a href="https://www.instagram.com/chadregier/">Instagram</a>
-                    <a href="https://twitter.com/ChadRegier">Twitter</a>
+                    <a href="./index.html">Home</a>
+                    <a href="./estimate.html">Gallery</a>
+                    <a href="./about.html">About</a>
+                    <a href="./gallery.html">Free Estimate</a>
                 </div>
                 <div class="footer-right">
-                    <a href="./index.html">Home</a>
-                    <a href="./action.html">Gallery</a>
-                    <a href="./about.html">About</a>
-                    <a href="./gallery.html">Get a Quote / Consultation</a>
+                    <a href="#">Instagram</a>
+
                 </div>
             </div>
         </div>
