--- a/index.html
+++ b/index.html
@@ -46,17 +46,13 @@
     <main class="container">
         <section id="about-home" class="about-home">
             <h2>Who is Roofdog Roofing?</h2>
-            <div id="card-1" class="card-1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, non fuga! Dignissimos temporibus id debitis blanditiis totam optio laboriosam officia quidem, nostrum dolor consectetur itaque! Voluptatum possimus dolorem consequatur ab!</p>
+            <div id="card-1" class="card-1 row">
+                <img src="./images/roofer.jpg" alt="Roofer" >
+                <p>We focus primarily on re-roofs with standard shingles. After years of industry experience reroofing various house styles and shapes, we can confidently say that we are prepared to provide the highest quality roofing experience for your needs. We hope to hear from you soon!</p>
             </div>
             <div id="card-2" class="card-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, non fuga! Dignissimos temporibus id debitis blanditiis totam optio laboriosam officia quidem, nostrum dolor consectetur itaque! Voluptatum possimus dolorem consequatur ab!</p>
-            </div>
-            <div id="card-3" class="card-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, non fuga! Dignissimos temporibus id debitis blanditiis totam optio laboriosam officia quidem, nostrum dolor consectetur itaque! Voluptatum possimus dolorem consequatur ab!</p>
-            </div>
-            <div id="card-4" class="card-4">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, non fuga! Dignissimos temporibus id debitis blanditiis totam optio laboriosam officia quidem, nostrum dolor consectetur itaque! Voluptatum possimus dolorem consequatur ab!</p>
+                <p>Chudley Baggins</p>
+                <p>"I loved my new roof from roofdog roofing! Now I know who let the dogs out. 10/10"</p>
             </div>
         </section>
     </main>
