--- a/estimate.html
+++ b/estimate.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Action - Roofdog Roofing</title>
+    <title>Estimate - Roofdog Roofing</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
                     <div class="nav-menu-options">
-                        <div class="nav-button active"><a href="./gallery.html">Home</a></div>
+                        <div class="nav-button"><a href="./gallery.html">Home</a></div>
                         <div class="nav-button"><a href="./gallery.html">Gallery</a></div>
                         <div class="nav-button"><a href="./about.html">About</a></div>
                         <div class="nav-button accent"><a href="./estimate.html">Free Estimate</a></div>
