Fixed broken home link

--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
                     <div class="nav-menu-options">
-                        <div class="nav-button"><a href="./gallery.html">Home</a></div>
+                        <div class="nav-button"><a href="./index.html">Home</a></div>
                         <div class="nav-button active"><a href="./gallery.html">Gallery</a></div>
                         <div class="nav-button"><a href="./about.html">About</a></div>
                         <div class="nav-button accent"><a href="./estimate.html">Free Estimate</a></div>
