--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main class="container">
         <section id="about-home" class="about-home">
             <h2>Who is Roofdog Roofing?</h2>
-            <div id="card-1" class="card-1 row">
+            <div id="card-1" class="card-1">
                 <img src="./images/roofer.jpg" alt="Roofer" >
                 <p>We focus primarily on re-roofs with standard shingles. After years of industry experience reroofing various house styles and shapes, we can confidently say that we are prepared to provide the highest quality roofing experience for your needs. We hope to hear from you soon!</p>
             </div>
