Color scheme update, website copy added

--- a/index.html
+++ b/index.html
@@ -14,64 +14,53 @@
     <header>
         <nav>
             <div class="container navbar row vertcenter">
-                <div id="nav-brand" class="nav-brand">
-                    <a href="./index.html" class="nav-brand"><strong>RoofdogRoofing</strong></a>
+                <div id="nav-brand" class="nav-brand row">
+                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="nav-logo" /></a>
+                    <a href="./index.html" class="nav-brand"><strong>Roofdog</strong></a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
                     <div class="nav-menu-options">
                         <div class="nav-button active"><a href="./index.html">Home</a></div>
-                        <div class="nav-button"><a href="./gallery.html">Gallery</a></div>
-                        <div class="nav-button"><a href="./about.html">About</a></div>
-                        <div class="nav-button accent"><a href="./estimate.html">Free Estimate</a></div>
+                        <div class="nav-button"><a href="./whyus.html">Why Choose Us?</a></div>
+                        <div class="nav-button accent"><a href="./estimate.html">Estimate</a></div>
                     </div>
                 </div>
             </div>
         </nav>
 
         <section id="banner" class="container banner">
-            <div id="banner-title" class="banner-title">
-                <h1>Roofdog Roofing</h1>
-            </div>
-
-            <div id="banner-tagline" class="banner-tagline">
-                <p>Your roofs best friend.</p>
-            </div>
-            <div id="banner-button" class="banner-button">
-                <a href="./estimate.html" class="button">Free Estimate</a>
+            <div class="overlay">
+                <div id="banner-title" class="banner-title">
+                    <h1>Roofdog Roofing</h1>
+                </div>
+    
+                <div id="banner-tagline" class="banner-tagline">
+                    <p>Your roof's best friend!</p>
+                </div>
+                <div id="banner-button" class="banner-button">
+                    <a href="./estimate.html" class="button">Free Estimate</a>
+                </div>
             </div>
         </section>
     </header>
 
     <main class="container">
-        <section id="about-home" class="about-home">
-            <h2>Who is Roofdog Roofing?</h2>
-            <div id="card-1" class="card-1">
-                <img src="./images/roofer.jpg" alt="Roofer" >
-                <p>We focus primarily on re-roofs with standard shingles. After years of industry experience reroofing various house styles and shapes, we can confidently say that we are prepared to provide the highest quality roofing experience for your needs. We hope to hear from you soon!</p>
-            </div>
-            <div id="card-2" class="card-2">
-                <p>Chudley Baggins</p>
-                <p>"I loved my new roof from roofdog roofing! Now I know who let the dogs out. 10/10"</p>
-            </div>
+        <section id="home-main" class="home-main">
+            <p>Is your roof shedding as much as your dog is?</p>
+            <p>We have the solution to <span style="font-style:italic;">one</span> of those problems!</p>
+            <a href="./whyus.html" class="button-2">Why Choose Us?</a>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <h4><a href="./index.html">Roofdog Roofing</a></h4>
-            <hr>
-            <div class="row sa">
-                <div class="footer-left">
-                    <a href="./index.html">Home</a>
-                    <a href="./estimate.html">Gallery</a>
-                    <a href="./about.html">About</a>
-                    <a href="./gallery.html">Free Estimate</a>
-                </div>
-                <div class="footer-right">
-                    <a href="#">Instagram</a>
-
-                </div>
+            <div>
+                <a href="./index.html"><img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="footer-logo"/></a>
+                <hr/>
+                <a href="./index.html">Home</a>
+                <a href="./whyus.html">Why Choose Us?</a>
+                <a href="./estimate.html">Estimate</a>
             </div>
         </div>
     </footer>
