--- a/404.html
+++ b/404.html
@@ -14,16 +14,16 @@
     <header>
         <nav>
             <div class="container navbar row vertcenter">
-                <div id="nav-brand" class="nav-brand">
-                    <a href="./index.html" class="nav-brand"><strong>RoofdogRoofing</strong></a>
+                <div id="nav-brand" class="nav-brand row">
+                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="nav-logo" /></a>
+                    <a href="./index.html" class="nav-brand"><strong>Roofdog</strong></a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
                     <div class="nav-menu-options">
-                        <div class="nav-button"><a href="./index.html">Home</a></div>
-                        <div class="nav-button"><a href="./gallery.html">Gallery</a></div>
-                        <div class="nav-button"><a href="./about.html">About</a></div>
-                        <div class="nav-button accent"><a href="./estimate.html">Free Estimate</a></div>
+                        <div class="nav-button active"><a href="./index.html">Home</a></div>
+                        <div class="nav-button"><a href="./whyus.html">Why Choose Us?</a></div>
+                        <div class="nav-button accent"><a href="./estimate.html">Estimate</a></div>
                     </div>
                 </div>
             </div>
@@ -32,26 +32,19 @@
 
     <main class="container">
         <section id="404" class="404">
-            <h1>404 - Content Not Found!</h1>
+            <h1>404 - Woof! Content Not Found! Woof!</h1>
             <p>The area of the site you are looking for does not exist. Please use any of the links on this page to navigate back to safety!</p>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <h4><a href="./index.html">Roofdog Roofing</a></h4>
-            <hr>
-            <div class="row sa">
-                <div class="footer-left">
-                    <a href="./index.html">Home</a>
-                    <a href="./estimate.html">Gallery</a>
-                    <a href="./about.html">About</a>
-                    <a href="./gallery.html">Free Estimate</a>
-                </div>
-                <div class="footer-right">
-                    <a href="#">Instagram</a>
-
-                </div>
+            <div>
+                <img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="footer-logo"/>
+                <hr/>
+                <a href="./index.html">Home</a>
+                <a href="./whyus.html">Why Choose Us?</a>
+                <a href="./estimate.html">Estimate</a>
             </div>
         </div>
     </footer>
