--- a/estimate.html
+++ b/estimate.html
@@ -14,16 +14,16 @@
     <header>
         <nav>
             <div class="container navbar row vertcenter">
-                <div id="nav-brand" class="nav-brand">
-                    <a href="./index.html" class="nav-brand"><strong>RoofdogRoofing</strong></a>
+                <div id="nav-brand" class="nav-brand row">
+                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="nav-logo" /></a>
+                    <a href="./index.html" class="nav-brand"><strong>Roofdog</strong></a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
                     <div class="nav-menu-options">
                         <div class="nav-button"><a href="./index.html">Home</a></div>
-                        <div class="nav-button"><a href="./gallery.html">Gallery</a></div>
-                        <div class="nav-button"><a href="./about.html">About</a></div>
-                        <div class="nav-button accent"><a href="./estimate.html">Free Estimate</a></div>
+                        <div class="nav-button"><a href="./whyus.html">Why Choose Us?</a></div>
+                        <div class="nav-button accent active"><a href="./estimate.html">Estimate</a></div>
                     </div>
                 </div>
             </div>
@@ -31,39 +31,27 @@
     </header>
 
     <main class="container">
-        <section id="estimate" class="estimate">
-            <h2>Free Estimate</h2>
-            <iframe data-tally-src="https://tally.so/embed/3qLV47?hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="358" frameborder="0" marginheight="0" marginwidth="0" title="Free Estimate"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+        <section id="process" class="process">
+            <h2>The Process</h2>
+            <p>Getting a quote is quick, easy, and free. If you're a millennial, you'll also appreciate that it doesn't come with any commitments. If your house is within city limits, you can receive a quote in less than a week, with only a quick phone call and without having someone on your roof.</p>
+            <p>Enter the information below, to the best of your knowledge, or, send us a text with the info. You will receive a call from us within 72 business hours. This call will take less than 10 minutes and is to ensure your quote doesn't come with any surprises. We then use that information, paired with software that utilises satellite imagery of the desired house (think 'Google Maps') to produce your quote. You will receive that within another 72 business hours.</p>
+            <p>Depending on the area, existing satellite imagery resolution can be reduced outside of city limits. To ensure accuracy and avoid surprises, if your house is outside of city limits, we may need to pop onto your roof beforehand.</p>
+            <p><strong>Phone:</strong> 000-000-0000<br/><strong>Instagram:</strong> <a href="https://www.instagram.com/roofdogroofing/">@RoofdogRoofing</a></p>
         </section>
-        <section id="contact" class="contact">
-            <h3>Contact</h3>
-            <div id="contact-info" class="contact-info">
-                <p><strong>Email:</strong> roofdogroofing@gmail.com</p>
-                <p><strong>Instagram:</strong> RoofdogRoofing</p>
-            </div>
-            <!-- <h3>Join my newsletter!</h3>
-            <form id="contact-form" class="contact-form">
-                <label for="email">Email: </label>
-                <input id="email" type="email">
-            </form> -->
+        <section id="estimate" class="estimate">
+            <h1>Free Estimate</h1>
+            <iframe data-tally-src="https://tally.so/embed/3qLV47?hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="358" frameborder="0" marginheight="0" marginwidth="0" title="Free Estimate"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <h4><a href="./index.html">Roofdog Roofing</a></h4>
-            <hr>
-            <div class="row sa">
-                <div class="footer-left">
-                    <a href="./index.html">Home</a>
-                    <a href="./estimate.html">Gallery</a>
-                    <a href="./about.html">About</a>
-                    <a href="./gallery.html">Free Estimate</a>
-                </div>
-                <div class="footer-right">
-                    <a href="#">Instagram</a>
-
-                </div>
+            <div>
+                <img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="footer-logo"/>
+                <hr/>
+                <a href="./index.html">Home</a>
+                <a href="./whyus.html">Why Choose Us?</a>
+                <a href="./estimate.html">Estimate</a>
             </div>
         </div>
     </footer>
