--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="nav-menu-options">
                         <div class="nav-button active"><a href="./index.html">Home</a></div>
                         <div class="nav-button"><a href="./whyus.html">Why Choose Us?</a></div>
-                        <div class="nav-button accent"><a href="./estimate.html">Estimate</a></div>
+                        <div class="nav-button"><a href="./estimate.html">Estimate</a></div>
                     </div>
                 </div>
             </div>
