--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Home - Roofdog Roofing</title>
+    <title>Home - Roof Dog Roofing</title>
 </head>
 
 <body>
@@ -15,8 +15,8 @@
         <nav>
             <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand row">
-                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="nav-logo" /></a>
-                    <a href="./index.html" class="nav-brand"><strong>Roofdog</strong></a>
+                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
+                    <a href="./index.html">Roof Dog</a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
@@ -29,12 +29,12 @@
             </div>
         </nav>
 
-        <section id="banner" class="container banner">
-            <div class="overlay">
+        <section id="banner" class="banner">
+            <div class="overlay container">
                 <div id="banner-title" class="banner-title">
-                    <h1>Roofdog Roofing</h1>
+                    <h1>Roof Dog Roofing</h1>
                 </div>
-    
+                
                 <div id="banner-tagline" class="banner-tagline">
                     <p>Your roof's best friend!</p>
                 </div>
@@ -56,7 +56,7 @@
     <footer>
         <div class="container">
             <div>
-                <a href="./index.html"><img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="footer-logo"/></a>
+                <a href="./index.html"><img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="footer-logo"/></a>
                 <hr/>
                 <a href="./index.html">Home</a>
                 <a href="./whyus.html">Why Choose Us?</a>
