Updated Roof Dog formatting

--- a/estimate.html
+++ b/estimate.html
@@ -15,8 +15,8 @@
         <nav>
             <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand row">
-                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="nav-logo" /></a>
-                    <a href="./index.html" class="nav-brand"><strong>Roofdog</strong></a>
+                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
+                    <a href="./index.html">Roof Dog</a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
@@ -36,7 +36,7 @@
             <p>Getting a quote is quick, easy, and free. If you're a millennial, you'll also appreciate that it doesn't come with any commitments. If your house is within city limits, you can receive a quote in less than a week, with only a quick phone call and without having someone on your roof.</p>
             <p>Enter the information below, to the best of your knowledge, or, send us a text with the info. You will receive a call from us within 72 business hours. This call will take less than 10 minutes and is to ensure your quote doesn't come with any surprises. We then use that information, paired with software that utilises satellite imagery of the desired house (think 'Google Maps') to produce your quote. You will receive that within another 72 business hours.</p>
             <p>Depending on the area, existing satellite imagery resolution can be reduced outside of city limits. To ensure accuracy and avoid surprises, if your house is outside of city limits, we may need to pop onto your roof beforehand.</p>
-            <p><strong>Phone:</strong> 000-000-0000<br/><strong>Instagram:</strong> <a href="https://www.instagram.com/roofdogroofing/">@RoofdogRoofing</a></p>
+            <p><strong>Phone:</strong> 780-270-4678<br/><strong>Instagram:</strong> <a href="https://www.instagram.com/roofdogroofing/">@RoofdogRoofing</a></p>
         </section>
         <section id="estimate" class="estimate">
             <h1>Free Estimate</h1>
