--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand row">
                     <a href="./index.html"><img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
-                    <a href="./index.html">Roof Dog</a>
+                    <a href="./index.html" class="nav-title">Roof Dog</a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
