--- a/whyus.html
+++ b/whyus.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>About - Roofdog Roofing</title>
+    <title>About - Roof Dog Roofing</title>
 </head>
 
 <body>
@@ -15,8 +15,8 @@
         <nav>
             <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand row">
-                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="nav-logo" /></a>
-                    <a href="./index.html" class="nav-brand"><strong>Roofdog</strong></a>
+                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
+                    <a href="./index.html">Roof Dog</a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
@@ -32,32 +32,32 @@
 
     <main class="container">
         <section id="about" class="about">
-            <h1>Why Choose Roofdog Roofing?</h1>
+            <h1>Why Choose Roof Dog Roofing?</h1>
             <hr />
-            <p>We, at RoofDog, believe dogs embody some amazing traits and strive to possess those same abilities. You're probably asking, what traits do roofers and woofers share? Besides being very happy to do hard work and being required to take a bath before we're allowed to sit on the couch, we also do everything we can to make sure that homeowners are happy. How do we make you happy? By being the best and goodest RoofDog there ever was!</p>
+            <p>We, at Roof Dog, believe dogs embody some amazing traits and strive to possess those same abilities. You're probably asking, what traits do roofers and woofers share? Besides being very happy to do hard work and being required to take a bath before we're allowed to sit on the couch, we also do everything we can to make sure that homeowners are happy. How do we make you happy? By being the best and goodest Roof Dog there ever was!</p>
             <p>If most people are happy to have a dog in their home, then we think you'll be more than happy to have us working ON your home.</p>
             <p class="quote"><span class="quote-marks">"</span>We'll protect your home like a large Pitbull (against the weather, NOT people)!<span class="quote-marks">"</span></p>
-            <p>Everyone needs to get a good quality night of sleep and the best way to do that is by feeling safe in your own home. If you live in a rough neighbourhood, you may consider owning a guard dog to help protect your house. Well, we've got news for you - the Edmonton area is about as rough of a neighbourhood as you can get when it comes to weather. What's the natural solution? RoofDog! When water, snow, hail, sleet, wind, and hot-sun realise that we're on protection detail, they'll turn tail and run, like an intruder running into a guard dog!</p>
+            <p>Everyone needs to get a good quality night of sleep and the best way to do that is by feeling safe in your own home. If you live in a rough neighbourhood, you may consider owning a guard dog to help protect your house. Well, we've got news for you - the Edmonton area is about as rough of a neighbourhood as you can get when it comes to weather. What's the natural solution? Roof Dog! When water, snow, hail, sleet, wind, and hot-sun realise that we're on protection detail, they'll turn tail and run, like an intruder running into a guard dog!</p>
             <p class="quote"><span class="quote-marks">"</span>We're like a pack of wolves and our clients are part of our pack!<span class="quote-marks">"</span></p>
-            <p>Canines are known for being loyal to their packs and working towards a common goal. When you have RoofDog renovate your roof, we welcome you into our pack because it helps us to provide for our pups at home. Don't worry, this doesn't mean we have to participate in a butt sniffing ritual, it means we will do what is right by you. Like a strong pack, we are happy to work together. This means taking the time to answer any questions or address any concerns that may be unique to your roof. We want to respect every pack member's time, both yours and ours, so we work hard to get things done right, the first time. Like a loyal member of a pack, we're only happy when our pack members are happy.</p>
+            <p>Canines are known for being loyal to their packs and working towards a common goal. When you have Roof Dog renovate your roof, we welcome you into our pack because it helps us to provide for our pups at home. Don't worry, this doesn't mean we have to participate in a butt sniffing ritual, it means we will do what is right by you. Like a strong pack, we are happy to work together. This means taking the time to answer any questions or address any concerns that may be unique to your roof. We want to respect every pack member's time, both yours and ours, so we work hard to get things done right, the first time. Like a loyal member of a pack, we're only happy when our pack members are happy.</p>
             <p class="quote"><span class="quote-marks">"</span>We work like well-seasoned Husky sled dogs!<span class="quote-marks">"</span></p>
-            <p>The arctic tundra can be a nasty and nearly inhospitable place. Husky sled dogs thrive in this environment, navigating humans away from thin ice and providing clues to when they should seek shelter, utilising their natural ability to sense bad weather. They do all this while working at a fast pace for long periods of time. RoofDog has a lot in common with these sled dogs when we are in our natural environment: the roof. We watch out for potential hazards to your roof, such as wood rot or insulation mould. We stay in tune with the weather and navigate your roof with a strong awareness for potential changes. Once we have addressed your concerns and the skies are dry, we work hard until your roof is installed.</p>
+            <p>The arctic tundra can be a nasty and nearly inhospitable place. Husky sled dogs thrive in this environment, navigating humans away from thin ice and providing clues to when they should seek shelter, utilising their natural ability to sense bad weather. They do all this while working at a fast pace for long periods of time. Roof Dog has a lot in common with these sled dogs when we are in our natural environment: the roof. We watch out for potential hazards to your roof, such as wood rot or insulation mould. We stay in tune with the weather and navigate your roof with a strong awareness for potential changes. Once we have addressed your concerns and the skies are dry, we work hard until your roof is installed.</p>
             <p class="quote"><span class="quote-marks">"</span>We're as attentive as a highly trained Border Collie!<span class="quote-marks">"</span></p>
             <p>Have you ever watched a border collie in action? It can be far out in the field at work and yet responds with what feels like a whisper from its handler. It waits patiently until it is allowed to work then jolts to work excitedly and stops immediately when told. We are just like that but instead of relying on whistles, we set times of when it's appropriate for us to start and stop working according to your pack's... uhm family's situation. Just like a good herding dog hears and responds to every command, we hear and respond to all your questions and concerns!</p>
             
             <h2>About Dan (Owner)<br/> <span style="font-size:smaller;">...and Dixie (The Inspiration)</span></h2>
             <hr />
             <p>One of the hardest things to do properly is communication. This was a lesson that was reinforced in Dan when he and his family adopted a new member into their pack - Dixie. She was a kind hearted, beautiful and extremely rambunctious puppy! She constantly wanted nothing more than to play, bark, and tear up any sock in sight. At first, it was frustrating to communicate to her that she needed to settle down at bedtime and that socks were not for chewing. With the assistance of a dog trainer and puppy classes Dan and his family learned how to properly communicate with Dixie which led to a very happy household for all.</p>
-            <p>Having a crew working on your roof that has been poorly communicated with, is like having an untrained puppy in your house. As Dan climbed the ladder in his roofing career he noticed just how important communication can be when it comes to renovating a roof. From homeowner to salesperson to roofing contractor to the employees there is a lot of information that can run away. Roofdog keeps that information on a leash, as you will be working directly with the top dog.</p>
+            <p>Having a crew working on your roof that has been poorly communicated with, is like having an untrained puppy in your house. As Dan climbed the ladder in his roofing career he noticed just how important communication can be when it comes to renovating a roof. From homeowner to salesperson to roofing contractor to the employees there is a lot of information that can run away. Roof Dog keeps that information on a leash, as you will be working directly with the top dog.</p>
             <p>Before meeting Dixie, Dan worked his way through the roofing industry. He started out as a labourer and has climbed the ladder to installer, foreman, service repairman, project manager, installation manager and finally the alpha dog! It's through his more than a decade-long experience moving through these various roles that he has learned the essential parts of how to properly communicate with clients and staff to ensure the renovation turns out just like the homeowner dreams it will. A roof renovation is not a complicated thing but the dog is in the details and just like a professional dog trainer, Dan knows what details to look for.</p>
-            <p>One of the advantages of working with RoofDog is having the owner on the roof. Dan knows the most important part of this business is keeping clients happy. This means more than providing high quality service at a competitive rate, it means taking the time to know what is important to the homeowner, it means setting mutual expectations before a project starts, and doing things right, the first time.</p>
+            <p>One of the advantages of working with Roof Dog is having the owner on the roof. Dan knows the most important part of this business is keeping clients happy. This means more than providing high quality service at a competitive rate, it means taking the time to know what is important to the homeowner, it means setting mutual expectations before a project starts, and doing things right, the first time.</p>
         </section>
     </main>
 
     <footer>
         <div class="container">
             <div>
-                <img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="footer-logo"/>
+                <img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="footer-logo"/>
                 <hr/>
                 <a href="./index.html">Home</a>
                 <a href="./whyus.html">Why Choose Us?</a>
