--- a/404.html
+++ b/404.html
@@ -15,13 +15,13 @@
         <nav>
             <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand row">
-                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="nav-logo" /></a>
-                    <a href="./index.html" class="nav-brand"><strong>Roofdog</strong></a>
+                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
+                    <a href="./index.html">Roof Dog</a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
                     <div class="nav-menu-options">
-                        <div class="nav-button active"><a href="./index.html">Home</a></div>
+                        <div class="nav-button"><a href="./index.html">Home</a></div>
                         <div class="nav-button"><a href="./whyus.html">Why Choose Us?</a></div>
                         <div class="nav-button"><a href="./estimate.html">Estimate</a></div>
                     </div>
