New Logo added, small visual changes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <nav>
             <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand row">
-                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
-                    <a href="./index.html" class="nav-title">Roof Dog</a>
+                    <a href="./index.html"><img src="./images/RoofDog-logo.jpg" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
                 </div>
                 <div class="nav-menu">
                     <div class="nav-menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
@@ -56,8 +55,7 @@
     <footer>
         <div class="container">
             <div>
-                <a href="./index.html"><img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="footer-logo"/></a>
-                <hr/>
+                <a href="./index.html"><img src="./images/RoofDog-logo.jpg" alt="Roof Dog Roofing Logo" class="footer-logo"/></a>
                 <a href="./index.html">Home</a>
                 <a href="./whyus.html">Why Choose Us?</a>
                 <a href="./estimate.html">Estimate</a>
