--- a/404.html
+++ b/404.html
@@ -40,8 +40,7 @@
     <footer>
         <div class="container">
             <div>
-                <img src="./images/logo-w.png" alt="Roofdog Roofing Logo" class="footer-logo"/>
-                <hr/>
+                <a href="./index.html"><img src="./images/RoofDog-logo.jpg" alt="Roof Dog Roofing Logo" class="footer-logo"/></a>
                 <a href="./index.html">Home</a>
                 <a href="./whyus.html">Why Choose Us?</a>
                 <a href="./estimate.html">Estimate</a>
