Updated color scheme to match new logo

--- a/estimate.html
+++ b/estimate.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Estimate - Roofdog Roofing</title>
+    <title>Estimate - Roof Dog Roofing</title>
 </head>
 
 <body>
@@ -32,6 +32,7 @@
     <main class="container">
         <section id="process" class="process">
             <h2>The Process</h2>
+            <hr/>
             <p>Getting a quote is quick, easy, and free. If you're a millennial, you'll also appreciate that it doesn't come with any commitments. If your house is within city limits, you can receive a quote in less than a week, with only a quick phone call and without having someone on your roof.</p>
             <p>Enter the information below, to the best of your knowledge, or, send us a text with the info. You will receive a call from us within 72 business hours. This call will take less than 10 minutes and is to ensure your quote doesn't come with any surprises. We then use that information, paired with software that utilises satellite imagery of the desired house (think 'Google Maps') to produce your quote. You will receive that within another 72 business hours.</p>
             <p>Depending on the area, existing satellite imagery resolution can be reduced outside of city limits. To ensure accuracy and avoid surprises, if your house is outside of city limits, we may need to pop onto your roof beforehand.</p>
@@ -39,6 +40,7 @@
         </section>
         <section id="estimate" class="estimate">
             <h1>Free Estimate</h1>
+            <hr/>
             <iframe data-tally-src="https://tally.so/embed/3qLV47?hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="358" frameborder="0" marginheight="0" marginwidth="0" title="Free Estimate"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
         </section>
     </main>
