--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>404 - Roofdog Roofing</title>
+    <title>404 - Roof Dog Roofing</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <nav>
             <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand row">
-                    <a href="./index.html"><img src="./images/logo-w.png" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
+                    <a href="./index.html"><img src="./images/RoofDog-logo.jpg" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
                     <a href="./index.html">Roof Dog</a>
                 </div>
                 <div class="nav-menu">
