--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="container navbar row vertcenter">
                 <div id="nav-brand" class="nav-brand row">
-                    <a href="./index.html"><img src="./images/RoofDog-logo.jpg" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
+                    <a href="./index.html"><img src="./images/roofdog-logo.png" alt="Roof Dog Roofing Logo" class="nav-logo" /></a>
                     <a href="./index.html">Roof Dog</a>
                 </div>
                 <div class="nav-menu">
@@ -40,7 +40,7 @@
     <footer>
         <div class="container">
             <div>
-                <a href="./index.html"><img src="./images/RoofDog-logo.jpg" alt="Roof Dog Roofing Logo" class="footer-logo"/></a>
+                <a href="./index.html"><img src="./images/roofdog-logo.png" alt="Roof Dog Roofing Logo" class="footer-logo"/></a>
                 <a href="./index.html">Home</a>
                 <a href="./whyus.html">Why Choose Us?</a>
                 <a href="./estimate.html">Estimate</a>
